# SoundcoreManager

./: .gitignore  .prettierrc  Cargo.toml  Decompile.md  Readme.md  async-todo.md  package-lock.json  package.json
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: device-support.md
.github/workflows/: ci.yml  clippy.yml  combine-prs.yml  main.yml  netlify.yml  pages.yml  pr.yml  push-build.yml  (+2 more)
bluetooth-lib/: Cargo.toml  Readme.md
bluetooth-lib/examples/: rfcomm.rs  scan.rs
bluetooth-lib/iobluetooth/: Cargo.toml  build.rs
bluetooth-lib/iobluetooth/examples/: search.rs
bluetooth-lib/iobluetooth/protos/: rfcomm.proto  search.proto
bluetooth-lib/iobluetooth/src/: client.rs  inquiry_adapter.rs  inquiry_delegate.rs  iobluetoothdevice.rs  iobluetoothdeviceinquiry.rs  lib.rs  main.rs  rfcomm_delegate.rs  server.rs  util.rs
bluetooth-lib/src/: error.rs  lib.rs  main.rs  platform.rs  rfcomm.rs  scanner.rs  types.rs  util.rs
bluetooth-lib/src/macos/: mod.rs  rfcomm.rs  scanner.rs
bluetooth-lib/src/win32/: mod.rs  rfcomm.rs  scanner.rs  util.rs
bluetooth-lib/src/winrt/: mod.rs  rfcomm.rs
docs/: ao.md
manager-app/: Cargo.toml  tauri.conf.json
manager-fut/: Cargo.toml
manager-fut/src/: future.rs  lib.rs  tokio.rs  wasm.rs
manager-ui/: .eslintrc.cjs  index.html  package.json  postcss.config.cjs  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1722103688758-3c65d995c14ca.mjs  vitest.config.ts
manager-wasm/: Cargo.toml
manager-wasm/src/: connection.rs  lib.rs  utils.rs  web_ble_device.rs
soundcore-lib/: .gitignore  A3040.md  A3951_BLE.md  Cargo.toml  Decompile.md  Readme.md
soundcore-lib/examples/: basic.rs  packet.rs
soundcore-lib/src/: A3951.rs  anc_types.rs  api.rs  base.rs  ble.rs  bt.rs  btaddr.rs  cli.rs  compat.rs  device.rs  device_descriptor.rs  device_manager.rs  device_registry.rs  devices.rs  error.rs  lib.rs  mac.rs  main.rs  mocks.rs  models.rs  packets.rs  parsers.rs  statics.rs  types.rs  utils.rs
soundcore-lib/src/api/: device.rs  device_descriptor.rs  device_registry.rs  feature_set.rs  models.rs  request_packet.rs  response_packet.rs  state.rs
soundcore-lib/src/api/feature_set/: equalizer_features.rs  flags.rs  sound_mode_features.rs
soundcore-lib/src/api/models/: anc.rs  battery.rs  eq.rs
soundcore-lib/src/api/state/: device_state.rs  soundcore_device_state.rs  state.rs  state_transformer.rs  state_update.rs
soundcore-lib/src/ble/: btleplug.rs  characteristic_resolver.rs  windows.rs
soundcore-lib/src/ble/btleplug/: btaddr.rs  connection.rs  connection_factory.rs  manager.rs  registry.rs  scanner.rs
soundcore-lib/src/ble/characteristic_resolver/: resolver.rs
soundcore-lib/src/ble/windows/: connection.rs  connection_factory.rs  descriptor.rs  scanner.rs
soundcore-lib/src/bt/: ble.rs  windows.rs
soundcore-lib/src/bt/btleplug/: connection.rs
soundcore-lib/src/bt/windows/: connection.rs  descriptor.rs  registry.rs  types.rs
soundcore-lib/src/compat/: state.rs
soundcore-lib/src/devices/: A3027Device.rs  A3040Device.rs  A3935Device.rs  A3951Device.rs  a3029.rs  a3040.rs  a3947.rs  a3951.rs  api.rs  mod.rs
soundcore-lib/src/devices/a3027/: features.rs
soundcore-lib/src/devices/a3028/: features.rs
soundcore-lib/src/devices/a3029/: features.rs
soundcore-lib/src/devices/a3040/: bass_up_command.rs  bass_up_update.rs  eq_info_update.rs  eq_update_command.rs  features.rs  sound_mode_update_command.rs
soundcore-lib/src/devices/a3930/: features.rs
soundcore-lib/src/devices/a3947/: state_update.rs
soundcore-lib/src/devices/a3951/: device.rs  eq_update_command.rs  features.rs  packets.rs  sound_mode_update_command.rs  transformers.rs
soundcore-lib/src/devices/a3951/packets/: sound_mode.rs  state_update.rs
soundcore-lib/src/devices/a3951/transformers/: state.rs
soundcore-lib/src/devices/api/: device.rs  device_registry.rs  device_state.rs  response_packet.rs
soundcore-lib/src/mocks/: connection.rs  connection_factory.rs  connection_manager.rs  scanner.rs
soundcore-lib/src/models/: a3040_button_model.rs  a3909_button_model.rs  adaptive_anc_mode.rs  age.rs  anc_mode.rs  auto_power.rs  battery.rs  button_model.rs  curr_sound_mode.rs  custom_anc.rs  custom_anc_value.rs  custom_trans_value.rs  customizable_trans_mode.rs  device_color.rs  eq.rs  eq_configuration.rs  eq_profile.rs  feature_flags.rs  fw.rs  game_mode.rs  gender.rs  hearid.rs  hearing_protect.rs  misc.rs  non_customizable_trans_mode.rs  packet_header.rs  packet_kind.rs  prompt_language.rs  scene_based_anc_mode.rs  serial.rs  side_tone.rs  sound_mode.rs  touch_tone.rs  trans_mode.rs  tws_status.rs  wear_detection.rs
soundcore-lib/src/packets/: command.rs  request.rs  response.rs
soundcore-lib/src/packets/command/: bass_up.rs  eq.rs  sound_mode.rs
soundcore-lib/src/packets/request/: state.rs
soundcore-lib/src/packets/response/: bass_up.rs  eq_info_update.rs  info.rs  sound_mode.rs  state.rs
soundcore-lib/src/packets/response/info/: a3951.rs
soundcore-lib/src/packets/response/state/: a3027.rs  a3028.rs  a3029.rs  a3040.rs  a3930.rs  a3951.rs
soundcore-lib/src/parsers/: a3040_button_model.rs  a3909_button_model.rs  age.rs  auto_power.rs  base.rs  battery.rs  button_model.rs  checksum.rs  eq.rs  eq_configuration.rs  fw.rs  gender.rs  hearid.rs  hearing_protect.rs  packet_header.rs  prompt_language.rs  serial.rs  side_tone.rs  sound_mode.rs  touch_tone.rs  wear_detection.rs
soundcore-lib/tests/: a3040.rs  a3947.rs  a3951.rs
src/: A3951.rs  App.tsx  main.rs  main.tsx  style.css  utils.rs  utils.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/src/: client_types.rs  device.rs  frontend_types.rs  main.rs  server.rs  soundcore_process.rs  tray.rs  utils.rs
src-tauri/src/async_bridge/: bridge.rs  command.rs  response.rs
test_data/: Cargo.toml
web/: package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/wasm/: Cargo.toml
web/wasm/src/: ble_uuid.rs  lib.rs  request_packet.rs  response_packets.rs  state.rs
(+111 files in other folders)
