[package]
name = "bluetooth-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["time", "macros", "rt-multi-thread"] }
async-trait = "0.1.68"
log = "0.4.17"
thiserror = "1.0.40"

[target.'cfg(target_os = "macos")'.dependencies]
iobluetooth = { path = "iobluetooth" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Devices_Bluetooth",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Rfcomm",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Foundation",
    "Storage_Streams",
    "Networking_Sockets"
]
