[package]
name = "manager-fut"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["Window"] }
wasm-bindgen-futures = { workspace = true }
