[package]
name = "manager-wasm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Bluetooth",
    "BluetoothDevice",
    "BluetoothRemoteGattServer",
    "BluetoothRemoteGattService",
    "BluetoothRemoteGattCharacteristic",
    "console"
] }
js-sys = { workspace = true }
manager-fut = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
soundcore-lib = { workspace = true, default-features = false }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
uuid = { workspace = true, features = ["v4"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"


