[package]
name = "soundcore-lib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "soundcore-lib-cli-tool"
path = "src/cli.rs"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
strum = { version = "0.25", features = ["derive"] }
nom = "7"
enumflags2 = { version = "0.7.7", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0.40"
bluetooth-lib = { path = "../bluetooth-lib/" }
log = "0.4.17"
typeshare = "1.0.1"
phf = { version = "0.11", default-features = false, features = ["macros"] }
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }

