[package]
name = "soundcore-lib"
version = "0.2.0"
license.workspace = true
edition.workspace = true

[features]
default = ["btleplug-backend"]
# Remove dep:windows when btleplug can resolve device names
btleplug-backend = ["dep:btleplug", "dep:windows"]
winrt-backend = ["dep:windows"]
mock-ble = []

[dependencies]
weak-table = { workspace = true }
typeshare = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
tokio = { workspace = true, features = [
    "time",
    "macros",
    "rt-multi-thread",
    "sync",
] }
async-trait = { workspace = true }
futures = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
nom = "7"
enumflags2 = { version = "0.7.7", features = ["serde"] }
bluetooth-lib = { path = "../bluetooth-lib" }
phf = { version = "0.11", default-features = false, features = ["macros"] }
derive_more = { version = "0.99", features = ["from"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
btleplug = { version = "0.11", features = ["serde"], optional = true }

[dev-dependencies]
test_data = { path = "../test_data" }


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Devices_Radios",
    "Devices_Enumeration",
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Bluetooth_Advertisement",
], optional = true }
