[package]
name = "soundcoremanager"
version = "0.1.1"
description = "A Tauri desktop app for managing Soundcore devices"
authors = ["Grigorios Mallios"]
license = "MIT"
repository = "https://github.com/gmallios/SoundcoreManager"
edition = "2021"
rust-version = "1.57"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
log = "0.4.17"
serde_json = "1.0"
typeshare = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["api-all", "devtools", "process-command-api", "system-tray"] }
soundcore-lib = { path = "../soundcore-lib/" }
bluetooth-lib = { path = "../bluetooth-lib/" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
