[package]
name = "soundcoremanager"
version = "0.2.1"
description = "A Tauri desktop app for managing Soundcore devices"
authors = ["Gregory Mallios"]
license = "MIT"
repository = "https://github.com/gmallios/SoundcoreManager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
log = "0.4.19"
serde_json = "1.0"
typeshare = "1.0.1"
thiserror = "1.0.40"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["api-all", "devtools", "process-command-api", "system-tray"] }
async-trait = "0.1.70"
soundcore-lib = { path = "../soundcore-lib/" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
