[package]
name = "soundcore-lib-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
soundcore-lib = { path = "../../soundcore-lib", default-features = false}
wasm-bindgen = "0.2.87"
serde = { version = "1.0.164", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
